--- a/LiveTddTotalAmount/LiveTddTotalAmount.csproj
+++ b/LiveTddTotalAmount/LiveTddTotalAmount.csproj
@@ -59,6 +59,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accounting.cs" />
+    <Compile Include="Budget.cs" />
+    <Compile Include="IRepository.cs" />
+    <Compile Include="Period.cs" />
     <Compile Include="TotalAmountTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
